deploy/overlays/corvus-syd/postgrest-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corvus-postgrest
spec:
  replicas: 1
