deploy/overlays/corvus-syd/pull-secret-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corvus-app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: quay-registry
      containers:
        - name: app
          imagePullPolicy: Always
