deploy/overlays/corvus-syd/redis-replicas.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  replicas: 1
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/name: redis
          app.kubernetes.io/part-of: corvus
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Gi
