deploy/overlays/corvus-syd/redis-sentinel-replicas.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-sentinel
spec:
  replicas: 1
