deploy/overlays/corvus-syd/redis-url.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corvus-app
spec:
  template:
    spec:
      containers:
        - name: app
